--- a/package.json
+++ b/package.json
@@ -29,15 +29,17 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@next/bundle-analyzer": "^16.1.1",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/bun": "^1.3.5",
+    "@types/node": "^20.19.27",
     "@types/qrcode": "^1.5.6",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "eslint": "^9.39.2",
     "eslint-config-next": "16.1.1",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3"
   },
   "ignoreScripts": [
     "sharp",
