--- a/biome.json
+++ b/biome.json
@@ -20,8 +20,7 @@
 			"a11y": {
 				"useKeyWithClickEvents": "off",
 				"useSemanticElements": "off",
-				"noLabelWithoutControl": "off",
-				"noRedundantAlt": "off"
+				"noLabelWithoutControl": "off"
 			},
 			"correctness": {
 				"noUnusedImports": "warn",
