--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "date-fns": "^4.1.0",
     "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.7",
-    "lucide-react": "^0.562.0",
     "next": "16.1.1",
-    "qrcode": "^1.5.4",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.70.0",
     "shadcn": "^3.6.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
     "xlsx": "^0.18.5",
@@ -37,7 +37,6 @@
     "@tailwindcss/postcss": "^4.1.18",
     "@types/bun": "^1.3.5",
     "@types/node": "^20.19.27",
-    "@types/qrcode": "^1.5.6",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "eslint": "^9.39.2",
